--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,4 +21,8 @@ spring:
 
   mybatis:
     mapper-locations: classpath:/mapper/**/*Mapper.xml
-#    type-aliases-package: com.example.jspblog.dto
+
+mybatis:
+  configuration:
+    map-underscore-to-camel-case: true
+    default-statement-timeout: 30
